<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16sp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tadress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address" />

    <EditText
        android:id="@+id/eadress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/ttitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title" />

    <EditText
        android:id="@+id/etitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:ems="10"
        android:hint="@string/enter_letters_theme"
        android:inputType="text" />

    <TextView
        android:id="@+id/ttext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/letter_text" />

    <EditText
        android:id="@+id/etext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <Button
        android:id="@+id/bsend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:text="@string/send" />

    <TextView
        android:id="@+id/ttelno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_phone_number" />

    <EditText
        android:id="@+id/etelno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <Button
        android:id="@+id/bcall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call" />
</LinearLayout>
